--- a/mycss.css
+++ b/mycss.css
@@ -1,6 +1,9 @@
-.parralax {
+body, html{
+  height: 100%;
+}
 
-  background-image: url("background.jpeg");
+.parallax {
+  background-image: url(pineapple.jpg);
 
   height: 100%;
 
@@ -8,4 +11,5 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
 }
