--- a/mycss.css
+++ b/mycss.css
@@ -2,14 +2,35 @@ body, html{
   height: 100%;
 }
 
+.name {
+  text-align: center;
+}
+
 .parallax {
-  background-image: url(pineapple.jpg);
-
-  height: 100%;
-
+  height: 70%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+#first{
+    background-image: url(images/pineapple.jpg);
+}
+#second{
+  background-image: url(images/blue-gradient.png);
+}
+.info {
+  text-align: center;
+  background-color: white;
+  padding: 3% 0%;
+}
 
+.info p{
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.languages {
+  text-align: center;
+  padding-top: 10%;
 }
