--- a/mycss.css
+++ b/mycss.css
@@ -6,6 +6,10 @@ body, html{
   text-align: center;
 }
 
+.fade{
+  opacity:1;
+}
+
 .parallax {
   height: 70%;
   background-attachment: fixed;
@@ -17,7 +21,7 @@ body, html{
     background-image: url(images/pineapple.jpg);
 }
 #second{
-  background-image: url(images/blue-gradient.png);
+  background-image: url(images/stars.jpg);
 }
 .info {
   text-align: center;
