--- a/mycss.css
+++ b/mycss.css
@@ -32,7 +32,7 @@ body, html {
 
 .space-medium {
   width: 100%;
-  margin-top: 5%;
+  height: 3%;
 }
 
 h2 {
@@ -83,6 +83,7 @@ h3 {
 .side-projects {
   background-color: #ededed;
   width: 100%;
+  padding-bottom: 2%;
 }
 
 .side-projects h2 {
@@ -141,6 +142,7 @@ h3 {
 }
 
 /* Modal CSS */
+
 .modal-title {
   text-align: center;
   font-size: 2em;
