removed comments / grey outline

--- a/mycss.css
+++ b/mycss.css
@@ -154,7 +154,7 @@ h2 {
 /* Side projects CSS */
 
 .side-projects {
-  background-color: #ededed;
+  /* background-color: #ededed; */
   width: 100%;
   padding-bottom: 2%;
 }
