--- a/mycss.css
+++ b/mycss.css
@@ -14,6 +14,11 @@ h2, h3, p, li {
   color: #5a5959;
 }
 
+h2 {
+  font-family: "Helvetica", "serif";
+  text-transform: uppercase;
+}
+
 /* Card shadow */
 .card {
   background: #ffffff;
@@ -53,12 +58,11 @@ h2 {
 .outer-container {
   width: 100% !important;
   height: auto;
-  margin-bottom: 120px;
+  margin-bottom: 200px;
   padding-top: 60px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #f5f5f5;
 }
 
 .container {
@@ -151,6 +155,21 @@ h2 {
   width: 80%;
 }
 
+.about > .container {
+  width: 70%
+}
+
+.about > .container > h2 {
+  padding-bottom: 15px;
+  font-weight: bold;
+  font-size: 2.5em;
+  text-align: left;
+}
+
+.about > .container > p {
+  line-height: 2;
+}
+
 /* Work Experience CSS */
 .work-experience {
   height: auto;
@@ -160,7 +179,7 @@ h2 {
 .job-name {
   display: inline-block;
   width: 100%;
-  padding-bottom: 1vh;
+  padding-bottom: 2.5%;
 }
 .job-name h3 {
   float: left;
@@ -170,7 +189,8 @@ h2 {
 }
 
 .work-experience p {
-  padding: 0px 250px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  line-height: 1.5;
 }
 
 .job-name h4 {
