--- a/mycss.css
+++ b/mycss.css
@@ -76,7 +76,6 @@ h2 {
 /* Navbar */
 .navbar {
   position: fixed;
-  right: 0;
   z-index: 1;
   background-color: #002a32;
   width: 100%;
@@ -312,7 +311,6 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 20px;
 }
 
 /* Blinking cursor */
@@ -347,6 +345,10 @@ h2 {
 
 /* Mobile rules */
 @media only screen and (max-width: 600px) {
+
+  .navbar {
+    max-width: 100vw;
+  }
 
   .navbar-list {
     float: none;
