--- a/mycss.css
+++ b/mycss.css
@@ -81,6 +81,7 @@ h2 {
   width: 100%;
   border-radius: 0px;
   border: 0px;
+  max-width: 100vw;
 }
 
 .navbar-list {
@@ -233,6 +234,7 @@ h2 {
   height: 400px;
   width: 400px;
   opacity: 0;
+  max-width: 100vw;
 }
 
 .image-wrapper .image-caption:hover {
@@ -346,10 +348,6 @@ h2 {
 /* Mobile rules */
 @media only screen and (max-width: 600px) {
 
-  .navbar {
-    max-width: 100vw;
-  }
-
   .navbar-list {
     float: none;
   }
@@ -378,5 +376,10 @@ h2 {
 
   .center-wrap {
     margin-bottom: 0%;
+  }
+  
+  .image-wrapper .image-caption {
+    height: 100%;
+    width: 100%;
   }
 }
