--- a/mycss.css
+++ b/mycss.css
@@ -21,7 +21,7 @@ h2 {
   font-family: Georgia;
   padding-bottom: 2px;
   text-align: center;
-  background-image: linear-gradient(to top,rgba(0,214,214,.25) 54%,transparent 54%,transparent 100%);
+  background-image: linear-gradient(45deg,rgba(0,214,214,.25) 54%,transparent 54%,transparent 100%);
   display: inline;
 }
 
@@ -56,16 +56,12 @@ h2 {
 .outer-container {
   width: 100% !important;
   height: auto;
-  margin-bottom: 120px;
+  margin: 0;
   padding-top: 80px;
   padding-bottom: 80px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-}
-
-.no-margin {
-  margin: 0;
 }
 
 .container {
@@ -103,7 +99,6 @@ h2 {
 
 .navbar-item:hover {
   cursor: pointer;
-  color: #32a2d6;
 }
 
 .navbar-item:before {
@@ -113,7 +108,7 @@ h2 {
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: #9fe1ff;
+  background-color: #00d6d6;
   visibility: hidden;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
@@ -161,6 +156,7 @@ h2 {
 .about > p {
   font-size: 1.5em;
   line-height: 2;
+  padding-top: 20px;
 }
 
 .about {
@@ -313,6 +309,10 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.center-wrap > h2 {
+  margin-bottom: 6vh;
 }
 
 /* Blinking cursor */
