--- a/mycss.css
+++ b/mycss.css
@@ -10,7 +10,7 @@ html {
   color: #000000;
 }
 
-h3, p, li {
+h3, li {
   color: #5a5959;
 }
 
@@ -147,7 +147,7 @@ h2 {
   padding-bottom: 0px;
 }
 
-.preface p {
+.preface-text {
   font-size: 2.5em;
   padding-top: 32vh;
 }
@@ -343,6 +343,25 @@ h2 {
       transform: translateY(-5px);
       /* transform-origin: bottom; */
   }
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+.type-first {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto; 
+  animation: typing 2s steps(40, end);
+}
+
+.type-second {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: typing 2s steps(40, end);
 }
 
 /* Mobile rules */
