--- a/mycss.css
+++ b/mycss.css
@@ -148,7 +148,7 @@ h2 {
 }
 
 .preface-text {
-  font-size: 2.5em;
+  font-size: 4vh;
   padding-top: 32vh;
 }
 
@@ -302,7 +302,7 @@ h2 {
 }
 
 .center-block {
-  border-radius: 40px;
+  border-radius: 5px;
 }
 
 .center-wrap {
