--- a/mycss.css
+++ b/mycss.css
@@ -148,7 +148,7 @@ h2 {
 }
 
 .preface-text {
-  font-size: 4vh;
+  font-size: 5vmin;
   padding-top: 32vh;
 }
 
@@ -235,7 +235,6 @@ h2 {
 
 .image-wrapper .image-caption:hover {
   opacity: .7;
-  -webkit-transition: opacity 0.35s;
   box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.75);
 }
 
@@ -391,6 +390,10 @@ h2 {
 
   .work-experience > .center-wrap > h2 {
     font-size: 2em;
+  }
+
+  .job-name {
+    display: grid;
   }
 
   .center-wrap {
