--- a/mycss.css
+++ b/mycss.css
@@ -317,7 +317,7 @@ h2 {
 /* Blinking cursor */
 .blinking-cursor {
   font-weight: 100;
-  font-size: 40px;
+  font-size: 6vmin;
   color: #2E3D48;
   animation: 1s blink step-end infinite;
 }
