--- a/resume_css.css
+++ b/resume_css.css
@@ -3,15 +3,19 @@ html {
   background-color: #ffffff;
   margin: 0;
   height: 100%;
-  font-family: 'Georgia', 'sans-serif';
-}
-
-.preface > h2, .preface > p {
-  color: #000000;
+  font-family: 'Open Sans', 'sans-serif';
 }
 
 h3, li {
   color: #5a5959;
+}
+
+h4 {
+  margin: 0 !important;
+}
+
+.custom-color-1 {
+  background-color: #c1f5f4 !important;
 }
 
 h2 {
@@ -34,23 +38,6 @@ h2 {
 
 .card-two {
   box-shadow: 1px 1px 0px 0px rgba(146,234,191,1);
-}
-
-.jumbotron {
-  background-color: #ededed;
-  text-align: center;
-}
-
-.jumbotron.category {
-  background-color: white;
-  padding: 0;
-  padding-top: 10px;
-  margin: 0;
-}
-
-.space-medium {
-  width: 100%;
-  height: 3%;
 }
 
 .outer-container {
@@ -150,25 +137,54 @@ h2 {
 
 /* Preface CSS */
 
-.preface {
+.preface-container {
   height: 100vh;
-  padding-bottom: 0px;
 }
 
-.preface-text {
+.preface {
   font-size: 5vmin;
   padding-top: 32vh;
+  padding-bottom: 15vh;
+}
+
+.read-more {
+  display: none;
+  margin-top: -20px;
+  padding-top: 0px;
+}
+
+.contacts {
+  padding-left: 5vw;
+}
+
+.contacts ul{
+  list-style-type: none;
+  padding-left: 10vw;
+}
+
+.contacts li {
+  margin: 15px 0 15px 0;
+  font-size: 1.2em;
+}
+
+.contacts-icon {
+  padding-right: 5px;
+  color: black;
+}
+
+.contacts-info {
+  color: #727c93 !important;
 }
 
 /* About CSS */
 .about > p {
-  font-size: 1.5em;
+  font-size: 1em;
   line-height: 2;
   padding-top: 20px;
 }
 
 .about {
-  width: 70%
+  padding-left: 5vw;
 }
 
 .about > h2 {
@@ -361,13 +377,6 @@ h2 {
   overflow: hidden;
   white-space: nowrap;
   margin: 0 auto; 
-  animation: typing 2s steps(40, end);
-}
-
-.type-second {
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0 auto;
   animation: typing 2s steps(40, end);
 }
 
