--- a/resume_css.css
+++ b/resume_css.css
@@ -18,6 +18,18 @@ h4 {
   background-color: #c1f5f4 !important;
 }
 
+.custom-color-2 {
+  background-color: #ecf1f7 !important;
+}
+
+.page-footer {
+  padding: 0 !important;
+}
+
+.page-footer .container {
+  color: black;
+}
+
 h2 {
   text-transform: uppercase;
   color: #002a32;
@@ -27,6 +39,11 @@ h2 {
   text-align: center;
   background-image: linear-gradient(45deg,rgba(0,214,214,.25) 54%,transparent 54%,transparent 100%);
   display: inline;
+}
+
+.navbar {
+  position: fixed;
+  right: 0;
 }
 
 /* Card shadow */
@@ -135,7 +152,7 @@ h2 {
 /* Work Experience CSS */
 .work-experience {
   height: auto;
-  padding-bottom: 5vh;
+  padding-bottom: 10vh !important;
 }
 
 .job-name {
@@ -170,7 +187,7 @@ h2 {
 /* Side projects CSS */
 
 .side-projects {
-  padding-bottom: 2%;
+  padding-bottom: 10vh !important;
   height: auto;
   width: 100%;
 }
