--- a/resume_css.css
+++ b/resume_css.css
@@ -43,7 +43,6 @@ h2 {
 
 .navbar {
   position: fixed;
-  right: 0;
 }
 
 /* Card shadow */
@@ -101,6 +100,7 @@ h2 {
   font-size: 5vmin;
   padding-top: 32vh;
   padding-bottom: 15vh;
+  text-align: center;
 }
 
 .read-more {
@@ -198,7 +198,7 @@ h2 {
 
 .image-wrapper {
   position: relative;
-  padding-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .image-wrapper .image-caption {
@@ -207,8 +207,8 @@ h2 {
   right: 0;
   left: 0;
   background-color: black;
-  height: 400px;
-  width: 400px;
+  height: 100%;
+  width: 100%;
   opacity: 0;
   max-width: 100vw;
 }
