--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,11 +1,16 @@
+$circleSize: 100px;
+$initialsYPos: 2%;
+$initialsXPos: 75%;
+
 .main {
   display: flex;
-  height: 100%;
   width: 100%;
+  height: 100%
 }
 
 .greeting {
   margin: 20% 0 0 10%;
+  width: 45%;
 }
 
 .greeting h2 {
@@ -21,66 +26,86 @@
 }
 
 .contact-images {
-  width: 8%;
-  height: 8%;
+  width: 6%;
+  height: 6%;
   margin-right: 7%;
 }
 
-.hero-boxes > * {
+.hero-boxes {
+  position: relative;
+  width: 55%;
+}
+
+.hero-boxes > *, .blob-1 {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  transform-origin: 100% 100%;
 }
 
 .rect-1 {
-  top: 20%;
-  left: 60%;
-  height: 400px;
-  width: 400px;
-  background-color: #0170d7;
+  top: 45%;
+  left: 20%;
+  height: 350px;
+  width: 350px;
+  background: linear-gradient(to right, #58ddce, #2A9D8F);
 }
 
 .rect-2 {
-  top:  20%;
-  left: 80%;
+  top:  45%;
+  left: 20%;
   height: 100px;
   width: 100px;
-  background-color: #0170d7;
+  background-color: #E9C46A;
 }
 
 .rect-3 {
-  top: 50%;
-  left: 80%;
-  height: 150px;
-  width: 150px;
-  background-color: #0170d7;
+  position: absolute;
+  top: 55%;
+  left: 72%;
+  height: 50px;
+  width: 15px;
+  border-radius: 5px;
+  background-color: #F4A261;
+  // background-color: black;
+}
+
+.rect-4 {
+  top: 75%;
+  left: 50%;
+  height: 210px;
+  width: 180px;
+  background: linear-gradient(to right, #264653, #246d8a);
+}
+
+.rect-5 {
+  top: 35%;
+  left: 50%;
+  height: 260px;
+  width: 260px;
+  background: linear-gradient(to right, #ffb3a0, #E76F51);
+}
+
+.circle-1 {
+  top: $initialsYPos;
+  left: $initialsXPos;
+  height: $circleSize;
+  width: $circleSize;
+  border-radius: 90%;
+  background-color: #F4A261;
+}
+
+.half-circle-1 {
+  top: $initialsYPos + 4;
+  left: $initialsXPos + 8%;
+  height: $circleSize;
+  width: $circleSize - $circleSize/3.5;
+  border-bottom-right-radius: $circleSize * 2;
+  border-top-right-radius: $circleSize * 2;
+  background-color: #2A9D8F;
 }
 
 .blob-1 {
-  top: 15%;
-  left: -25%;
-  height: 60%;
-  width: 60%;
+  top: -35%;
+  left: -40%;
+  height: 80%;
+  width: 80%;
   opacity: 0.4;
 }
-
-.blob {
-  top: 20%;
-  left: -10%;
-  opacity: 0.4;
-}
-
-// .rect-4 {
-//   height: 50px;
-//   width: 50px;
-//   background-color: #0170d7;
-// }
-
-// .rect-5 {
-//   height: 100px;
-//   width: 300px;
-//   background-color: #0170d7;
-// }
