--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,6 +1,6 @@
 $circleSize: 100px;
 $initialsYPos: 2%;
-$initialsXPos: 75%;
+$initialsXPos: -10%;
 
 .main {
   display: flex;
@@ -9,6 +9,7 @@ $initialsXPos: 75%;
 }
 
 .greeting {
+  position: relative;
   margin: 20% 0 0 10%;
   width: 45%;
 }
@@ -37,6 +38,16 @@ $initialsXPos: 75%;
 }
 
 .hero-boxes > *, .blob-1 {
+  position: absolute;
+}
+
+.initials {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.initials > * {
   position: absolute;
 }
 
@@ -94,7 +105,7 @@ $initialsXPos: 75%;
 
 .half-circle-1 {
   top: $initialsYPos + 4;
-  left: $initialsXPos + 8%;
+  left: $initialsXPos + 8;
   height: $circleSize;
   width: $circleSize - $circleSize/3.5;
   border-bottom-right-radius: $circleSize * 2;
@@ -108,4 +119,61 @@ $initialsXPos: 75%;
   height: 80%;
   width: 80%;
   opacity: 0.4;
+}
+
+@media (max-width: 1300px) {
+  .half-circle-1 {
+    left: $initialsXPos + 10;
+  }
+}
+
+@media (max-width: 1050px) {
+  .half-circle-1 {
+    left: $initialsXPos + 15;
+  }
+}
+
+@media (max-width: 700px) {
+  .half-circle-1 {
+    left: $initialsXPos + 25;
+  }
+}
+
+@media (max-height: 650px), (max-width: 650px) {
+  .main {
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .hero-boxes {
+    width: 0px;
+    height: 0px;
+  }
+
+  .hero-boxes > * {
+    visibility: hidden;
+  }
+
+  .greeting {
+    width: 50%;
+    height: 50%;
+    margin: auto;
+  }
+
+  .greeting h2 {
+    font-size: 2.5em;
+    margin: 0;
+    color: #363636;
+  }
+  
+  .greeting h4 {
+    font-size: 1em;
+    margin-top: 5%;
+    color: #5a5a5a;
+  }
+
+  .contact-images {
+    width: 10%;
+    height: 10%;
+  }
 }
